syntax="proto3";

package product;

option go_package = "product";

message ProductRequest {
    string product_id = 1;
}

message ProductResponse {
    string product_id = 1 ;
    string product_name = 2;
    int32 quantity = 3;
}

service ProductService {
    rpc GetDetails(ProductRequest) returns (ProductResponse);
}

